--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
         <div class="btn-group">
             <button class="btn-save" onclick="saveAll()">저장 및 누적</button>
-            <button class="btn-share" onclick="shareToKakao()">전체 기록 복사</button>
+            <button class="btn-share" onclick="shareToKakao()">전체 기록 복사(카톡나눔)</button>
         </div>
     </div>
 
