--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         const title = document.getElementById('periodSelect').selectedOptions[0].text;
         const now = new Date().toLocaleString();
         
-        let text = `[한양 LDI 사역 보고 - ${now}]\n\n`;
+        let text = `[LDI 사역 보고 - ${now}]\n\n`;
         
         // 1. 오늘의 실적
         let dailyText = "";
